feat: test creat Tournee